--- a/package.json
+++ b/package.json
@@ -2,14 +2,27 @@
   "name": "laravel-easy-localizer",
   "displayName": "Laravel Easy Localizer",
   "publisher": "The-Young-Maker",
+  "author": {
+    "name": "The-Young-Maker"
+  },
+  "contributors": [
+    {
+      "name": "nicola-myo",
+      "company": "myobject.eu"
+    }
+  ],
   "description": "",
-  "version": "0.0.6",
+  "version": "0.0.7",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/The-Young-Maker/laravel-easy-localizer.git"
+  },
+  "categories": ["Programming Languages", "Language Packs"],
+  "keywords": ["laravel", "php", "localization", "translation", "language", "json", "i18n", "vscode"],
   "engines": {
     "vscode": "^1.91.0"
   },
-  "categories": [
-    "Other"
-  ],
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
@@ -63,6 +76,11 @@
           "type": "boolean",
           "default": false,
           "description": "Disables the caching mechanism used by the extension. By default, the extension caches the content of scanned files to avoid re-scanning unchanged files. Enabling this option forces the extension to re-scan all files every time."
+        },
+        "laravelEasyLocalizer.jsoncReferenceLanguage": {
+          "type": "string",
+          "default": "en",
+          "description": "The language code to use as a reference when exporting to JSONC files. This language keys will be used as a base for all other language files, associating the list of source files of the labels as comments."
         }
       }
     }
